--- a/src/components/Environment/Environment.css
+++ b/src/components/Environment/Environment.css
@@ -17,7 +17,7 @@
 }
 
 .results {
-  background-color: #75715e;
+  background-color: #000000cc;
 }
 
 .results > * {
