--- a/src/components/Errors/Errors.css
+++ b/src/components/Errors/Errors.css
@@ -1,3 +1,3 @@
 .errors {
-    color: #f94b34;
+  color: #ff6fa0;
 }
